--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "config": {
+
     "welcome_text": {
       "dialogues" : [
         "Hello and Welcome on our Discord!",
@@ -10,6 +11,7 @@
 
       }
     },
+
     "ticket": {
       "main_dialogues":{
         "ticket_header": "Ticket System",
@@ -40,17 +42,35 @@
         "ticket_timeout" : 60
       }
     },
+
+    "changeActivity": {
+      "choose_activity_type": "Choose the type of activity your bot should perform",
+      "select_title": "Activity Types",
+      "activity_types": {
+        "playing": "Playing (...)",
+        "streaming": "Streaming (...)",
+        "listening": "Listening to (...)",
+        "competing": "Competing in (...)",
+        "watching": "Watching (...)"
+      },
+      "error": "An unexpected error has occurred! Please contact the administrator. Bot activity has not been changed"
+    },
+
     "debug": {
       "ping": "Pong",
       "reload": "Successfully reloaded config file!",
       "motd": "The bot works successfully",
-      "missing_permissions": "Missing permissions!",
+
       "debug_accessed_roles": [
           "909035731731771412",
           "892444582976032798",
           "902890996210229258",
           "902891003185360996"
-      ]
+      ],
+      "errors": {
+        "missing_permissions": "Missing permissions!",
+        "MissingRequiredArgument" : "Missing Required Argument"
+      }
     }
   }
 }
